--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-streamlit==1.28.1
-pandas==2.1.4
-numpy==1.26.2
-joblib==1.3.2
-matplotlib==3.8.2
-seaborn==0.13.0
-scikit-learn==1.3.2
-plotly==5.17.0
+# Core framework
+streamlit>=1.32.0
+
+# Data processing
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Model persistence (must be installed)
+joblib>=1.3.0
+
+# Visualization
+plotly>=5.18.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+
+# ML libraries (required by loaded models AND for deserialization)
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+catboost>=1.2.0
